welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:13: error: expected class or object definition
def parcoursdiag(diag : Int, cpt : Int): Int={
^Diagonal:26: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:29: error: expected start of definition
	override def forward()  {
                 ^Diagonal:32: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:35: error: expected start of definition
	override def backward() {
                 ^Diagonal:38: error: Unmatched closing brace '}' ignored here
}
^