welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
  var y=0
  var cpt=0
  ecritMessage(cpt)
  for(i <- 1 to 6){
    parcoursdiag(i,0)}
    
  }
}



def parcoursdiag(diag : Int, cpt : Int): Int={
  var x=0
  var y=diag
  while(y!=0){
    x+=1
    y-=1
    setPos(x,y)
  }
  return setPos(x,y)
}
